# oo7

./: .gitignore
.github/workflows/: CI.yml
cli/src/: main.rs
oo7-portal-impl/: Cargo.toml
oo7-portal-impl/data/: oo7-portal-impl.service
oo7-portal-impl/src/: main.rs
src/dbus/: collection.rs
