[package]
name = "oo7-portal-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.11", features = [ "attributes" ] }
futures = "0.3"
futures-channel = "0.3"
oo7 = { path = "../" }
ring = "0.17.5"
secrecy = { version = "0.8", features = [ "alloc" ] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = "3.5.0"
zeroize = { version = "1", features = ["zeroize_derive"] }
